Tidying some files.

--- a/Testing-SEVIRI.ipynb
+++ b/Testing-SEVIRI.ipynb
@@ -19,6 +19,9 @@
     "import xarray as xr\n",
     "import numpy as np\n",
     "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "def _write_gdal(fname, datas):\n",
     "    from osgeo import gdal\n",
     "    driver = gdal.GetDriverByName(\"GTiff\")\n",
@@ -74,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "28cd1366",
    "metadata": {},
    "outputs": [],
@@ -91,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "fb118cb5",
    "metadata": {},
    "outputs": [],
@@ -102,36 +105,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "feb04898",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "E:\\miniconda3\\lib\\site-packages\\pyresample\\gradient\\__init__.py:56: UserWarning: You are using the Gradient Search Resampler, which is still EXPERIMENTAL.\n",
-      "  warnings.warn(\"You are using the Gradient Search Resampler, which is still EXPERIMENTAL.\")\n",
-      "E:\\miniconda3\\lib\\site-packages\\pyproj\\crs\\crs.py:1282: UserWarning: You will likely lose important projection information when converting to a PROJ string from another format. See: https://proj.org/faq.html#what-is-the-best-format-for-describing-coordinate-reference-systems\n",
-      "  proj = self._crs.to_proj4(version=version)\n",
-      "E:\\miniconda3\\lib\\site-packages\\pyproj\\crs\\crs.py:1282: UserWarning: You will likely lose important projection information when converting to a PROJ string from another format. See: https://proj.org/faq.html#what-is-the-best-format-for-describing-coordinate-reference-systems\n",
-      "  proj = self._crs.to_proj4(version=version)\n",
-      "E:\\miniconda3\\lib\\site-packages\\pyproj\\crs\\crs.py:1282: UserWarning: You will likely lose important projection information when converting to a PROJ string from another format. See: https://proj.org/faq.html#what-is-the-best-format-for-describing-coordinate-reference-systems\n",
-      "  proj = self._crs.to_proj4(version=version)\n",
-      "E:\\miniconda3\\lib\\site-packages\\pyproj\\crs\\crs.py:1282: UserWarning: You will likely lose important projection information when converting to a PROJ string from another format. See: https://proj.org/faq.html#what-is-the-best-format-for-describing-coordinate-reference-systems\n",
-      "  proj = self._crs.to_proj4(version=version)\n",
-      "E:\\miniconda3\\lib\\site-packages\\pyproj\\crs\\crs.py:1282: UserWarning: You will likely lose important projection information when converting to a PROJ string from another format. See: https://proj.org/faq.html#what-is-the-best-format-for-describing-coordinate-reference-systems\n",
-      "  proj = self._crs.to_proj4(version=version)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ecm_scn2 = ecm_scn.resample(scn[bnames[0]].attrs['area'], resampler='gradient_search')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "122fdbf8",
    "metadata": {},
    "outputs": [],
@@ -142,23 +126,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "e1c4a155",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Simon\\PycharmProjects\\PyCoxMunk\\PyCoxMunk\\src\\CM_SceneGeom.py:190: UserWarning: Some solar zenith values out of range. Clipping.\n",
-      "  warnings.warn(\"Some solar zenith values out of range. Clipping.\")\n",
-      "C:\\Users\\Simon\\PycharmProjects\\PyCoxMunk\\PyCoxMunk\\src\\CM_SceneGeom.py:200: UserWarning: Some satellite zenith values out of range. Clipping.\n",
-      "  warnings.warn(\"Some satellite zenith values out of range. Clipping.\")\n",
-      "C:\\Users\\Simon\\PycharmProjects\\PyCoxMunk\\PyCoxMunk\\src\\CM_SceneGeom.py:210: UserWarning: Some solar azimuth values out of range. Scaling.\n",
-      "  warnings.warn(\"Some solar azimuth values out of range. Scaling.\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pcm = PyCoxMunk(scn, bnames, angle_names='calc', delete_when_done=False, mask_bad=False)\n",
     "pcm.setup_wind(scn['u10'], scn['v10'])"
@@ -166,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "3d7343d9",
    "metadata": {},
    "outputs": [],
@@ -176,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "6f2c3cbc",
    "metadata": {},
    "outputs": [],
@@ -186,8 +157,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b5555169",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_write_gdal('I:/cm_py.tiff', np.fliplr(pcm.scn['cox_munk_refl_VIS006'].values)/100.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b5b0599c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_write_gdal('I:/vis006.tiff', np.fliplr(pcm.scn['VIS006'].values)/100.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c665ddf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -209,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
