--- a/Testing-SEVIRI.ipynb
+++ b/Testing-SEVIRI.ipynb
@@ -2,25 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "c27e8622",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
     "from satpy import Scene, find_files_and_readers\n",
     "from pyresample import create_area_def\n",
-    "from PyCoxMunk import PyCoxMunk\n",
     "from datetime import datetime\n",
     "from netCDF4 import Dataset\n",
     "import dask.array as da\n",
     "import xarray as xr\n",
     "import numpy as np\n",
+    "import pycoxmunk\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "from satpy.utils import debug_on, debug_off\n",
+    "\n",
+    "debug_off()\n",
     "\n",
     "def _write_gdal(fname, datas):\n",
     "    from osgeo import gdal\n",
@@ -77,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "28cd1366",
    "metadata": {},
    "outputs": [],
@@ -89,12 +102,14 @@
     "bnames = ['VIS006']\n",
     "\n",
     "scn = Scene([sev_fname], reader='seviri_l1b_native')\n",
-    "scn.load(bnames, upper_right_corner='NE')"
+    "scn.load(bnames, upper_right_corner='NE')\n",
+    "\n",
+    "cache_dir = 'I:/sat_data/SEV/cache/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "fb118cb5",
    "metadata": {},
    "outputs": [],
@@ -105,17 +120,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "feb04898",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ecm_scn2 = ecm_scn.resample(scn[bnames[0]].attrs['area'], resampler='gradient_search')"
+    "ecm_scn2 = ecm_scn.resample(scn[bnames[0]].attrs['area'], resampler='bilinear', cache_dir=cache_dir, radius_of_influence=150000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "122fdbf8",
    "metadata": {},
    "outputs": [],
@@ -126,18 +141,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "e1c4a155",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcm = PyCoxMunk(scn, bnames, angle_names='calc', delete_when_done=False, mask_bad=False)\n",
+    "pcm = pycoxmunk.PyCoxMunk(scn, bnames, angle_names='calc', delete_when_done=False, mask_bad=False)\n",
     "pcm.setup_wind(scn['u10'], scn['v10'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "3d7343d9",
    "metadata": {},
    "outputs": [],
@@ -147,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "6f2c3cbc",
    "metadata": {},
    "outputs": [],
@@ -157,17 +172,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "b5555169",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pcm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m _write_gdal(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mI:/cm_py.tiff\u001b[39m\u001b[38;5;124m'\u001b[39m, np\u001b[38;5;241m.\u001b[39mfliplr(\u001b[43mpcm\u001b[49m\u001b[38;5;241m.\u001b[39mscn[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcox_munk_refl_VIS006\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvalues)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m100.\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pcm' is not defined"
+     ]
+    }
+   ],
    "source": [
     "_write_gdal('I:/cm_py.tiff', np.fliplr(pcm.scn['cox_munk_refl_VIS006'].values)/100.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "b5b0599c",
    "metadata": {},
    "outputs": [],
@@ -177,8 +204,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "34dec5e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__path__',\n",
+       " '__spec__']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(pycoxmunk)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7c665ddf",
+   "id": "47531b2b",
    "metadata": {},
    "outputs": [],
    "source": []
