Update the example notebooks and provide some more in-code commenting.

--- a/Testing-SEVIRI.ipynb
+++ b/Testing-SEVIRI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "c27e8622",
    "metadata": {},
    "outputs": [
@@ -33,9 +33,24 @@
     "\n",
     "from satpy.utils import debug_on, debug_off\n",
     "\n",
-    "debug_off()\n",
+    "debug_off()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bd5bbc6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Some helper functions\n",
     "\n",
     "def _write_gdal(fname, datas):\n",
+    "    \"\"\"Helper to save array to tiff using gdal.\n",
+    "    \n",
+    "    For the most part this is not needed, it is primarily\n",
+    "    used for debugging purposes.\n",
+    "    \"\"\"\n",
     "    from osgeo import gdal\n",
     "    driver = gdal.GetDriverByName(\"GTiff\")\n",
     "    shp = datas.shape\n",
@@ -48,7 +63,13 @@
     "    del dst_ds\n",
     "    \n",
     "def load_wind(fname, var, ecm_scn=None, ftype='nc', dater=datetime(2000, 1, 1, 0, 0, 0)):\n",
-    "    \"\"\"Load wind datasets from a file\n",
+    "    \"\"\"Load wind datasets from a file.\n",
+    "    \n",
+    "    This assumes that the winds are in individual netCDF files. It also makes a lot of\n",
+    "    assumptions about the data type and area covered. Thus, it will probably not work\n",
+    "    for anything other than the ERA5 data used for internal testing but it can be the\n",
+    "    basis for your own wind loading functions.\n",
+    "    \n",
     "    Inputs:\n",
     "     - fname: String, the input filename.\n",
     "     - var: String, name of variable to read\n",
@@ -56,21 +77,30 @@
     "     - ftype: String, file type. Currently only netCDF ('nc') is supported.\n",
     "     - dater: DateTime, time to set as Scene start_time.\n",
     "    Returns:\n",
-    "      - ecm_scn: Scene, containing 'u10' and 'v10' winds.\"\"\"\n",
+    "      - ecm_scn: Scene, containing 'u10' and 'v10' winds.\n",
+    "    \"\"\"\n",
     "    if ftype != 'nc':\n",
     "        raise ValueError(\"Only netCDF winds are supported at present.\")\n",
+    "    \n",
+    "    # Open the netCDF file\n",
     "    fid = Dataset(fname, 'r')\n",
+    "    # Load the variable and retrieve the lats + lons\n",
     "    inv = np.array(fid[var]).squeeze()\n",
     "    lat = np.array(fid['latitude']).squeeze()\n",
     "    lon = np.array(fid['longitude']).squeeze()\n",
+    "    # ERA5 has lats in range 0 -> 360. Here we switch to -180 -> 180\n",
     "    if np.nanmax(lon) > 180:\n",
     "        inv = np.roll(inv, np.round(inv.shape[1]/2).astype(int))\n",
     "        lon = lon - 180.\n",
+    "    # Done with file, close it\n",
     "    fid.close()\n",
     "    \n",
+    "    # Create a Scene if there isn't one\n",
     "    if ecm_scn is None:\n",
     "        ecm_scn = Scene()\n",
     "    \n",
+    "    # Create an area for use in resampling.\n",
+    "    # This assumes lat/lon gridded data\n",
     "    area_ext = (np.nanmin(lon), np.nanmin(lat), np.nanmax(lon), np.nanmax(lat))\n",
     "    targ_area = create_area_def(\"source_area\",\n",
     "                                \"EPSG:4326\",\n",
@@ -78,96 +108,120 @@
     "                                width=inv.shape[1],\n",
     "                                height=inv.shape[0])\n",
     "\n",
-    "\n",
+    "    # Create a new dataset in the Scene for the wind data\n",
     "    ecm_scn[var] = xr.DataArray(da.from_array(inv),\n",
     "                                coords={'y': lat, 'x': lon},\n",
     "                                attrs={'start_time': dater})\n",
     "\n",
     "    ecm_scn[var].attrs['area'] = targ_area\n",
     "    \n",
+    "    # Return the scene\n",
     "    return ecm_scn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "28cd1366",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sev_fname = 'I:/sat_data/SEV/MSG3-SEVI-MSG15-0100-NA-20160326144242.057000000Z-NA.nat'\n",
-    "u10_fname = 'I:/sat_data/SEV/ecmwf-era5_oper_an_sfc_201603261500.10u.nc'\n",
-    "v10_fname = 'I:/sat_data/SEV/ecmwf-era5_oper_an_sfc_201603261500.10v.nc'\n",
+    "# Filename of the input granule\n",
+    "sev_fname = 'd:/sat_data/SEV/MSG3-SEVI-MSG15-0100-NA-20160326144242.057000000Z-NA.nat'\n",
     "\n",
+    "# Filenames of the U and V 10m wind components, here taken from ERA5\n",
+    "u10_fname = 'd:/sat_data/SEV/ecmwf-era5_oper_an_sfc_201603261500.10u.nc'\n",
+    "v10_fname = 'd:/sat_data/SEV/ecmwf-era5_oper_an_sfc_201603261500.10v.nc'\n",
+    "\n",
+    "# Band name to load / process\n",
     "bnames = ['VIS006']\n",
     "\n",
-    "scn = Scene([sev_fname], reader='seviri_l1b_native')\n",
-    "scn.load(bnames, upper_right_corner='NE')\n",
-    "\n",
-    "cache_dir = 'I:/sat_data/SEV/cache/'"
+    "# Cache dir for use in satpy's resample routines\n",
+    "cache_dir = 'd:/sat_data/SEV/cache/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "28137ef2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a scene for the granule and load data\n",
+    "scn = Scene([sev_fname], reader='seviri_l1b_native')\n",
+    "scn.load(bnames, upper_right_corner='NE')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "fb118cb5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the ECMWF wind\n",
     "ecm_scn = load_wind(u10_fname, 'u10', ecm_scn=None)\n",
     "ecm_scn = load_wind(v10_fname, 'v10', ecm_scn=ecm_scn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "feb04898",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Resample the ECMWF wind data onto the satellite grid\n",
     "ecm_scn2 = ecm_scn.resample(scn[bnames[0]].attrs['area'], resampler='bilinear', cache_dir=cache_dir, radius_of_influence=150000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "122fdbf8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Copy the winds from the ECMWF scene into the satellite scene.\n",
+    "# This simplifies calling PyCoxMunk, as we only need to pass\n",
+    "# one scene instead of two\n",
     "scn['u10'] = ecm_scn2['u10'].copy()\n",
     "scn['v10'] = ecm_scn2['v10'].copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "e1c4a155",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create the PyCoxMunk class\n",
     "pcm = pycoxmunk.PyCoxMunk(scn, bnames, angle_names='calc', delete_when_done=False, mask_bad=False)\n",
+    "# Set up the wind variables within PyCoxMunk\n",
     "pcm.setup_wind(scn['u10'], scn['v10'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "3d7343d9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Retrieve the sea surface reflectance\n",
     "pcm.retr_coxmunk_refl()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "6f2c3cbc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcm.scn.save_datasets(base_dir='I:/', enhance=False, dtype=np.float32)"
+    "# Save results and intermediate variables to disk.\n",
+    "pcm.scn.save_datasets(base_dir='d:/sat_data/sev/out/', enhance=False, dtype=np.float32)"
    ]
   },
   {
@@ -205,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "34dec5e3",
+   "id": "6659b09e",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47531b2b",
+   "id": "ae2152b7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -256,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
