--- a/Testing_SLSTR.ipynb
+++ b/Testing_SLSTR.ipynb
@@ -11,8 +11,11 @@
     "%autoreload 2\n",
     "\n",
     "from satpy import Scene, find_files_and_readers\n",
-    "from PyCoxMunk import PyCoxMunk\n",
-    "import numpy as np"
+    "from pycoxmunk import PyCoxMunk\n",
+    "import numpy as np\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -22,7 +25,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bnames = ['S1', 'S2', 'S3']"
+    "# Set which bands we wish to load\n",
+    "bnames = ['S1', 'S2', 'S3']\n",
+    "\n",
+    "# Set the directory containing the SLSTR data dir\n",
+    "# This folder should contain one or more subfolders with the SLSTR data (ending .SEN3)\n",
+    "# To save memory and CPU time, only use a few granules maximum for this.\n",
+    "indir = 'D:/sat_data/slstr/'\n",
+    "\n",
+    "# Set the directory where we'll save the output\n",
+    "outdir = 'D:/sat_data/slstr/out/'"
    ]
   },
   {
@@ -32,8 +44,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scn = Scene(find_files_and_readers(base_dir='D:/data/SLSTR/', reader='slstr_l1b'))\n",
+    "# Create a scene by searching for files\n",
+    "scn = Scene(find_files_and_readers(base_dir=indir, reader='slstr_l1b'))\n",
+    "# Load the bands\n",
     "scn.load(bnames)\n",
+    "\n",
+    "# Additionally load the solar and satellite angles\n",
+    "# This saves computing them internally\n",
     "scn.load(['solar_zenith_angle',\n",
     "          'solar_azimuth_angle',\n",
     "          'satellite_zenith_angle',\n",
@@ -45,81 +62,45 @@
    "execution_count": 4,
    "id": "3d555065",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TESTING\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"TESTING\")\n",
+    "# Create the PyCoxMunk class for processing\n",
     "pcm = PyCoxMunk(scn, bnames)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "d21f1c78",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Here we assume a uniform wind, needed for cases we don't have actual wind data\n",
+    "# See SEVIRI example for case where wind data is available\n",
     "pcm.setup_wind(1., 1.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "ab714a7c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Retrieve the sea surface reflectance\n",
     "pcm.retr_coxmunk_refl()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "136378a9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\miniconda\\lib\\site-packages\\rasterio\\__init__.py:230: NotGeoreferencedWarning: Dataset has no geotransform, gcps, or rpcs. The identity matrix be returned.\n",
-      "  s = writer(path, mode, driver=driver,\n",
-      "C:\\miniconda\\lib\\site-packages\\rasterio\\__init__.py:230: NotGeoreferencedWarning: Dataset has no geotransform, gcps, or rpcs. The identity matrix be returned.\n",
-      "  s = writer(path, mode, driver=driver,\n",
-      "C:\\miniconda\\lib\\site-packages\\rasterio\\__init__.py:230: NotGeoreferencedWarning: Dataset has no geotransform, gcps, or rpcs. The identity matrix be returned.\n",
-      "  s = writer(path, mode, driver=driver,\n",
-      "C:\\miniconda\\lib\\site-packages\\rasterio\\__init__.py:230: NotGeoreferencedWarning: Dataset has no geotransform, gcps, or rpcs. The identity matrix be returned.\n",
-      "  s = writer(path, mode, driver=driver,\n",
-      "C:\\miniconda\\lib\\site-packages\\rasterio\\__init__.py:230: NotGeoreferencedWarning: Dataset has no geotransform, gcps, or rpcs. The identity matrix be returned.\n",
-      "  s = writer(path, mode, driver=driver,\n",
-      "C:\\miniconda\\lib\\site-packages\\rasterio\\__init__.py:230: NotGeoreferencedWarning: Dataset has no geotransform, gcps, or rpcs. The identity matrix be returned.\n",
-      "  s = writer(path, mode, driver=driver,\n"
-     ]
-    }
-   ],
-   "source": [
-    "pcm.scn.save_dataset('S1', base_dir='D:/', enhance=False, dtype=np.float32)\n",
-    "pcm.scn.save_dataset('cox_munk_refl_S1', base_dir='D:/', enhance=False, dtype=np.float32)\n",
-    "pcm.scn.save_dataset('solar_zenith_angle', base_dir='D:/', enhance=False, dtype=np.float32)\n",
-    "pcm.scn.save_dataset('solar_azimuth_angle', base_dir='D:/', enhance=False, dtype=np.float32)\n",
-    "pcm.scn.save_dataset('satellite_zenith_angle', base_dir='D:/', enhance=False, dtype=np.float32)\n",
-    "pcm.scn.save_dataset('satellite_azimuth_angle', base_dir='D:/', enhance=False, dtype=np.float32)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4cf5180",
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save results to the directory specified earlier\n",
+    "pcm.scn.save_datasets(base_dir=outdir, enhance=False, dtype=np.float32)"
+   ]
   }
  ],
  "metadata": {
@@ -138,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
