Update examples and fix a few bugs.

--- a/Complex_SEVIRI.ipynb
+++ b/Complex_SEVIRI.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "c27e8622",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -38,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "c203e18e",
+   "execution_count": 2,
+   "id": "5e0b928a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,13 +112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "28cd1366",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Filename of the input granule\n",
     "sev_fname = 'd:/sat_data/SEV/MSG3-SEVI-MSG15-0100-NA-20160326144242.057000000Z-NA.nat'\n",
+    "\n",
+    "# Landmask filename\n",
+    "lsm_fname = './Examples/SEVIRI_LANDMASK.tiff'\n",
     "\n",
     "# Filenames of the U and V 10m wind components, here taken from ERA5\n",
     "u10_fname = 'd:/sat_data/SEV/ecmwf-era5_oper_an_sfc_201603261500.10u.nc'\n",
@@ -142,8 +136,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7830e727",
+   "execution_count": 4,
+   "id": "351f79c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "fb118cb5",
    "metadata": {},
    "outputs": [],
@@ -166,18 +160,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
+   "id": "5dd6b13c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the land mask\n",
+    "lsm_scn = Scene([lsm_fname], reader='generic_image')\n",
+    "lsm_scn.load(['image'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "feb04898",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Resample the ECMWF wind data onto the satellite grid\n",
-    "ecm_scn2 = ecm_scn.resample(scn[bnames[0]].attrs['area'], resampler='bilinear', cache_dir=cache_dir, radius_of_influence=150000)"
+    "ecm_scn2 = ecm_scn.resample(scn[bnames[0]].attrs['area'], resampler='bilinear', radius_of_influence=150000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "122fdbf8",
    "metadata": {},
    "outputs": [],
@@ -191,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "e1c4a155",
    "metadata": {},
    "outputs": [],
@@ -204,7 +210,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
+   "id": "e8c16e04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<pycoxmunk.CM_PixMask.CMPixMask object at 0x000002574B18C640>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set up the pixel masking\n",
+    "pcm.setup_pixmask(land_mask=np.array(lsm_scn['image'].data).squeeze())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "3d7343d9",
    "metadata": {},
    "outputs": [],
@@ -215,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "6f2c3cbc",
    "metadata": {},
    "outputs": [],
@@ -223,6 +248,14 @@
     "# Save results and intermediate variables to disk.\n",
     "pcm.scn.save_datasets(base_dir='d:/sat_data/sev/out/', enhance=False, dtype=np.float32)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70c9f163",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
