Update multiple files for minor typos, bugfixes and pypi

--- a/Complex_SEVIRI.ipynb
+++ b/Complex_SEVIRI.ipynb
@@ -1,9 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0bad568e",
+   "metadata": {},
+   "source": [
+    "# Example processing script for SEVIRI data\n",
+    "### A more complex example than for SLSTR, using a land-mask and ERA5 wind profiles.\n",
+    "\n",
+    "This script requires MSG/SEVIRI data in native format (although it can be easily edited to use HRIT data instead).\n",
+    "\n",
+    "Data is available for download at https://data.eumetsat.int\n",
+    "\n",
+    "ERA5 data is included in the Examples directory. These files were generated using Copernicus Climate Change Service information (2022).\n",
+    "\n",
+    "In this example we compute the sea surface reflectance and also the BRDF values:\n",
+    "\n",
+    "    - rho_0d: Solar beam to satellite view reflectances\n",
+    "    - rho_0d: Solar beam to diffuse reflectances\n",
+    "    - rho_dv: Diffuse to satellite view reflectances\n",
+    "    - rho_dd: Diffuse to diffuse reflectances\n",
+    "    \n",
+    "We also apply a land/sea mask (derived from the NASA SRTM data and remapped onto the SEVIRI grid) to mask out all non-water pixels."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c27e8622",
+   "id": "032ce27b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,39 +44,43 @@
     "import pycoxmunk\n",
     "\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
-    "from satpy.utils import debug_on, debug_off\n",
-    "\n",
-    "debug_off()"
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "3128e435",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filename of the input granule\n",
+    "sev_fname = 'd:/sat_data/SEV/MSG3-SEVI-MSG15-0100-NA-20160326144242.057000000Z-NA.nat'\n",
+    "\n",
+    "# Landmask filename\n",
+    "lsm_fname = './Examples/SEVIRI_LANDMASK.tiff'\n",
+    "\n",
+    "# Filenames of the U and V 10m wind components, here taken from ERA5\n",
+    "u10_fname = './Examples/ecmwf-era5_oper_an_sfc_201603261500.10u.nc'\n",
+    "v10_fname = './Examples/ecmwf-era5_oper_an_sfc_201603261500.10v.nc'\n",
+    "\n",
+    "# Band name to load / process\n",
+    "bnames = ['VIS006', 'VIS008', 'IR_016']\n",
+    "\n",
+    "# Cache dir for use in satpy's resample routines\n",
+    "# This is optional, but can help speed things up - especially for \n",
+    "# geostationary satellites where the area covered is a constant region.\n",
+    "cache_dir = 'd:/sat_data/SEV/cache/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "5e0b928a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Some helper functions\n",
-    "\n",
-    "def _write_gdal(fname, datas):\n",
-    "    \"\"\"Helper to save array to tiff using gdal.\n",
-    "    \n",
-    "    For the most part this is not needed, it is primarily\n",
-    "    used for debugging purposes.\n",
-    "    \"\"\"\n",
-    "    from osgeo import gdal\n",
-    "    driver = gdal.GetDriverByName(\"GTiff\")\n",
-    "    shp = datas.shape\n",
-    "    dst_ds = driver.Create(fname,\n",
-    "                           shp[1],\n",
-    "                           shp[0],\n",
-    "                           1,\n",
-    "                           gdal.GDT_Float32)\n",
-    "    dst_ds.GetRasterBand(1).WriteArray(datas)\n",
-    "    del dst_ds\n",
-    "    \n",
+    "# A helper function needed for ECMWF processing\n",
     "def load_wind(fname, var, ecm_scn=None, ftype='nc', dater=datetime(2000, 1, 1, 0, 0, 0)):\n",
     "    \"\"\"Load wind datasets from a file.\n",
     "    \n",
@@ -108,30 +136,6 @@
     "    \n",
     "    # Return the scene\n",
     "    return ecm_scn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "28cd1366",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Filename of the input granule\n",
-    "sev_fname = 'd:/sat_data/SEV/MSG3-SEVI-MSG15-0100-NA-20160326144242.057000000Z-NA.nat'\n",
-    "\n",
-    "# Landmask filename\n",
-    "lsm_fname = './Examples/SEVIRI_LANDMASK.tiff'\n",
-    "\n",
-    "# Filenames of the U and V 10m wind components, here taken from ERA5\n",
-    "u10_fname = 'd:/sat_data/SEV/ecmwf-era5_oper_an_sfc_201603261500.10u.nc'\n",
-    "v10_fname = 'd:/sat_data/SEV/ecmwf-era5_oper_an_sfc_201603261500.10v.nc'\n",
-    "\n",
-    "# Band name to load / process\n",
-    "bnames = ['VIS006']\n",
-    "\n",
-    "# Cache dir for use in satpy's resample routines\n",
-    "cache_dir = 'd:/sat_data/SEV/cache/'"
    ]
   },
   {
@@ -213,15 +217,7 @@
    "execution_count": 10,
    "id": "bbaa5bf4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<pycoxmunk.CM_PixMask.CMPixMask object at 0x000002574B18C640>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set up the pixel masking\n",
     "pcm.setup_pixmask(land_mask=np.array(lsm_scn['image'].data).squeeze())"
@@ -229,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "id": "3d7343d9",
    "metadata": {},
    "outputs": [],
@@ -240,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "6f2c3cbc",
    "metadata": {},
    "outputs": [],
@@ -251,8 +247,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "bd9827ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class PyCoxMunk in module pycoxmunk.CM_Main:\n",
+      "\n",
+      "class PyCoxMunk(builtins.object)\n",
+      " |  PyCoxMunk(scn, band_names, oc_dir=None, angle_names=None, do_brdf=False, mask_bad=True, delete_when_done=True)\n",
+      " |  \n",
+      " |  The main class for the library, sets up and runs processing.\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __init__(self, scn, band_names, oc_dir=None, angle_names=None, do_brdf=False, mask_bad=True, delete_when_done=True)\n",
+      " |      Initialise the class.\n",
+      " |      Inputs:\n",
+      " |      - scn: Satpy Scene, the scene containing data and angles.\n",
+      " |      - band_names: List, if supplied lists all band names to process.\n",
+      " |      - oc_dir: (optional) String, if supplied points to location of Ocean Color CCI data.\n",
+      " |      - angle_names: (optional) Dict, if supplied this should list all\n",
+      " |        solar/satellite angle dataset names. If not supplied, these are assumed.\n",
+      " |      - do_brdf: Bool, if true then PyCoxMunk will also compute BRDF coefficients.\n",
+      " |      - mask_bad: Bool, if true then pixels with bad data (f.ex zenith too high) will be set to np.nan\n",
+      " |  \n",
+      " |  retr_coxmunk_refl(self)\n",
+      " |      Main function for computing the sea surface reflectance.\n",
+      " |      \n",
+      " |      This uses data previously loaded including, if available, wind and ocean color\n",
+      " |      data to compute the reflectance using the approach described in Sayer (2010).\n",
+      " |      DOI: 10.5194/amt-3-813-2010\n",
+      " |      \n",
+      " |      This accounts for white caps and Chlorophyll content (via Ocean Color). However,\n",
+      " |      it is designed for use over open oceans and may give poor results in coastal regions,\n",
+      " |      lakes, and other water types.\n",
+      " |  \n",
+      " |  setup_pixmask(self, cloud_mask=None, land_mask=None, sol_zen_mask=None, sat_zen_mask=None)\n",
+      " |      Add a pixel mask to the class.\n",
+      " |  \n",
+      " |  setup_wind(self, u10, v10)\n",
+      " |      Set up the fields that depend on wind speed.\n",
+      " |      Inputs:\n",
+      " |        - u10: Float or np.ndarray, u-direction wind speed at 10m in m/s.\n",
+      " |        - v10: Float or np.ndarray, v-direction wind speed at 10m in m/s.\n",
+      " |      Returns:\n",
+      " |        - self.shared_wind: CM_Shared_Wind class.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables (if defined)\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object (if defined)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(pycoxmunk.PyCoxMunk)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1df1fd66",
+   "id": "bfd00c9b",
    "metadata": {},
    "outputs": [],
    "source": []
