Add better / more documentation.

--- a/Complex_SEVIRI.ipynb
+++ b/Complex_SEVIRI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0bad568e",
+   "id": "c4a3c5a3",
    "metadata": {},
    "source": [
     "# Example processing script for SEVIRI data\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "032ce27b",
+   "id": "75739ff9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3128e435",
+   "id": "bd0ac4f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "bd9827ca",
+   "id": "254e180f",
    "metadata": {},
    "outputs": [
     {
@@ -315,8 +315,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "id": "a8305984",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on package pycoxmunk:\n",
+      "\n",
+      "NAME\n",
+      "    pycoxmunk - For instructions on using pycoxmunk please see the documentation under the pycoxmunk.PyCoxMunk class.\n",
+      "\n",
+      "PACKAGE CONTENTS\n",
+      "    CM_Calcs\n",
+      "    CM_Constants\n",
+      "    CM_Main\n",
+      "    CM_PixMask\n",
+      "    CM_SceneGeom\n",
+      "    CM_Shared_Wind\n",
+      "    CM_Utils\n",
+      "    Tests (package)\n",
+      "\n",
+      "FILE\n",
+      "    c:\\users\\simon\\pycharmprojects\\pycoxmunk\\pycoxmunk\\__init__.py\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(pycoxmunk)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "bfd00c9b",
+   "id": "d8d047c1",
    "metadata": {},
    "outputs": [],
    "source": []
